   implementations, e.g, databases, JMS SPIs etc have now been consolidated in 
   example/config. This has also allowed us to reduce the number of example specific
   readme files.
     
Miscellaneous
=============

 * Support for message metadata (SC84, SC89).
   More information at http://www.openadaptor.org/metadata.html 

Bug Fixes
=========

SC81: Exception when stopping Adaptor with AdaptorRunconfiguration via 'kill PID'.


=================================================
openadaptor3 production 3.4.3 Release Notes

See licence.txt for Licence information.
=================================================

Date: 28th November 2008
Author: openadaptor Core Team

openadaptor 3.4.3
=======

Connectors
==========

 * New DynamicFileWriteConnector allows writing to files with names dynamically 
   derived from a message payload (SC68). 
   
 * FileWriteConnector - ported rollover functionality (based on file size and file age)  
   from legacy Openadaptor.   
   
 * WebServicePollingReadConnector: a)renamed to WebServiceReadConnector to match OA 
   naming standards. b)now implements IEnrichmentReadConnector and can be used
   with enrichment processors.
   
 * New CXF based Web service connectors: WebServiceCXFListeningReadConnector,
   WebServiceCXFWriteConnector, WebServiceCXFReadConnector. The connectors are 
   equivalents of the existing XFire based connectors. 
       
 * AbstractPollingReadConnector: the 'reconnect' property renamed to a more descriptive
   'reconnectDelegateBetweenPolls'. Changes in adaptors' configs that use 
   LoopingPollingReadConnectors or CronnablePollingReadConnectors need to be made
   accordingly. 
   
   |---------------------------------------------------------------------------------|
   |         OA 3.4.2                   |             OA 3.4.3                       |    
   |---------------------------------------------------------------------------------|