@@ -99,6 +99,8 @@ Miscellaneous
 
  * Support for message metadata (SC84, SC89).
    More information at http://www.openadaptor.org/metadata.html 
+   
+ * (SC94) Resetting exitCode in ReadNode (affects use with AdaptorRunConfiguration).  
 
 Bug Fixes
 =========
